# NLH-PokerAI-project

./: .gitignore  CLAUDE.md  PROGRESS.md  play_poker.py
brain/: __init__.py  abstraction.py  deep_cfr.py  distributed_training.py  env_wrapper.py  multi_player_features.py  networks.py  personality_agents.py  personality_analysis.py  population_training.py  ppo_agent.py  random_agent.py  sixmax_training.py  tournament.py  train.py  visualization.py
core_engine/: Cargo.toml
core_engine/benches/: benchmark.rs
core_engine/src/: cards.rs  evaluator.rs  game.rs  lib.rs  rng.rs
ui/: __init__.py  game_controller.py  hand_history.py  terminal_ui.py  test_phase4.py  web_server.py
